web-infras/parser/tests/fixtures/babel/core/uncategorised/490/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,48)
1|function hello() {'use strict'; ({ s: function eval() { } }); }
 |                                              ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,48)
1|function hello() {'use strict'; ({ s: function eval() { } }); }
 |                                              ^
[SyntaxError]: unexpect keyword in strict mode (1,48)
1|function hello() {'use strict'; ({ s: function eval() { } }); }
 |                                              ^
